# acpype

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Acpype_API_Jupyter.ipynb  CONTRIBUTING.md  CcpnToAcpype.py  Dockerfile  FUNDING.yml  MANIFEST.in  NOTE.txt  README.md  README.txt  acpype  acpype.py  acpype.sh  acpype_docker.bat  acpype_docker.sh  acpype_gmx_tutorial.md  acpypeserver_instructions  charmmgen.tgz  charmmgen_linux.tgz  charmmgen_macos.tgz  pyproject.toml  release.sh  requirements.txt  run_acpype.py  setup.py  setup_conda.py  tox.ini  update_linux_bins.sh  update_macos_bins.sh
.github/workflows/: check_acpype.yml  codeql-analysis.yml  python-app.yml
2019-03-22_14_36/: acpype.py
acpype/: __init__.py  acpype.py  acs_api.py  cli.py  logger.py  mol.py  params.py  parser_args.py  topol.py  utils.py
acpype/amber21-11_linux/: amber.sh  install_on_ubuntu_18-04
acpype/amber21-11_os/: amber.sh  dat
acpype/amber_linux/: LICENSE  amber.sh
acpype/amber_macos/: amber.sh
acpype_lib/: __init__.py  _version.py  acpype.py  acs_api.py  mol.py  params.py  parser_args.py  topol.py  utils.py
acpype_pip/: MANIFEST.in  setup.py
acpype_pip/scripts/: acpype.py
acpypeserver/: acpype_rest.py  celerybeat-schedule  db.sqlite3  manage.py  pip-selfcheck.json  requeriments.txt  requirements.txt
acpypeserver/acpypeserver/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
acpypeserver/apache/: acpype_httpd.conf  acpype_httpd2.conf
acpypeserver/submit/: apps.py  forms.py  models.py  serializers.py  table.py  tasks.py  test1.py  urls.py  views.py
acpypeserver2/: acpypeserver_instructions  requirements.txt
acpypeserver2/acpypeserver/: settings.py  urls.py
acpypeserver2/submit/: forms.py  models.py  tasks.py  views.py
acpypeserver_27_10/: db.sqlite3  manage.py  requirements.txt
acpypeserver_27_10/acpypeserver/: urls.py
acpypeserver_sqlite/: celery_run.txt
acpypeserver_sqlite/acpypeserver/: settings.py  urls.py
acpypeserver_sqlite/submit/: models.py  tasks.py  tasks.py.save  tokens.py  views.py
acpypeweb/: manage.py
acpypeweb/acpype/: apps.py  models.py  toRunAcpype.py  urls.py  views.py
acpypeweb/acpypeweb/: settings.py  urls.py  wsgi.py
amber17-6_os/dat/: 0README
amber17-6_os/include/: defreal.h  fftw3.f03  nab.h  nab_netcdf.h  nabcode.h  netcdf.inc  sander.h  sander_api.mod  sanderles_api.mod  xmin_opt.h
amber19-0_os/include/: fftw3.f03  lmod_opt.h  netcdf.inc  netcdf.mod  netcdf_f03.mod  netcdf_meta.h  netcdf_nc_interfaces.mod  netcdf_nf_data.mod  sander_api.mod  sanderles_api.mod  sff.h
amber19-0_os/lib/: libmdgx.dylib  libnetcdf.settings
amber21-11_linux/: LICENSE  amber.sh
amber21-11_linux/dat/: Karplus.txt  XaLeap_wcl
amber21-11_linux/include/: nab.h  nabcode.h  sander_api.mod  sanderles_api.mod  sff.h
amber21-11_os/: amber.sh
amber21-11_os/dat/: CMakeLists.txt  map.DG-AMBER  map.NEF-AMBER
amber21-11_os/include/: mdgx.h  sander.h  sander_api.mod  sanderles_api.mod
amber21-11_os/lib/: libXtal.dylib  libcifparse.dylib  libemil.dylib  libmdgx.dylib  libpbsa.dylib  libpdb++.dylib  libreduce-tools.dylib  libsaxs_md.dylib  libsaxs_rism.dylib  libsff_fortran.dylib  libxdrfile.dylib
ambertools-19-0_linux/dat/: CMakeLists.txt
ambertools-19-0_linux/dat/leap/cmd/: leaprc.music  leaprc.xFPchromophores
ambertools-19-0_linux/dat/leap/cmd/oldff/: leaprc.GLYCAM_06
ambertools-19-0_linux/dat/leap/lib/: 8Murea.readme  lipid14.lib  terminalphos.lib
ambertools-19-0_linux/dat/leap/prep/oldff/: all_amino02EP.in
ambertools-19-0_linux/dat/pixmap/: icon
ambertools-19-0_linux/dat/rism3d/electron_rdf/: Tl+.rdf
ambertools-19-0_os/include/: AmberNetcdf.h  nabcode.h  netcdf_fortv2_c_interfaces.mod  netcdf_nc_data.mod  sander.h
ambertools-19-19_linux/lib/: libnetcdf.settings
docs/: conf.py  index.rst  requirements.txt
ffamber_additions/: README.txt  ions.itp  spc.itp  spce.itp  tip3p.itp
legacy/: CcpnToAcpype.py
recipe/: build.sh  meta.yaml  setup_conda.py
scripts/: acpype.py  ambXgmxEner.py  analyse_test_acpype_db_ligands.py  check_acpype.py  compare_itps.py  run_test_acpype_db_ligands.py  ver_today.sh
scripts/Data/: ComplexAmber_GMX.gro  ComplexAmber_GMX.top  Ligand.itp
test/: FFF.mol2  analyse_test_acpype_db_ligands.py  check_acpype.py  compare_itps.py  run_test_acpype_db_ligands.py  script_test.sh  test_acpype.py  thalidomide.mol2
test/AAA.acpype/: AAA.mol2  AAA.pkl  AAA_AC.frcmod  AAA_AC.inpcrd  AAA_AC.lib  AAA_AC.prmtop  AAA_CHARMM.inp  AAA_CHARMM.prm  AAA_CHARMM.rtf  AAA_CNS.inp  AAA_CNS.par  AAA_CNS.top  AAA_GMX.gro  AAA_GMX.itp  AAA_GMX.top  AAA_GMX_OPLS.itp  AAA_GMX_OPLS.top  AAA_bcc_gaff.mol2  em.mdp  md.mdp  sqm.in  sqm.out
test/Data/: ComplexAmber_GMX.top
test/FFF.acpype/: FFF.pkl  FFF_AC.frcmod  FFF_AC.inpcrd  FFF_AC.lib  FFF_AC.prmtop  FFF_CHARMM.inp  FFF_CHARMM.prm  FFF_CHARMM.rtf  FFF_CNS.inp  FFF_CNS.par  FFF_CNS.top  FFF_GMX.gro  FFF_GMX.itp  FFF_GMX.top  FFF_GMX_OPLS.itp  FFF_GMX_OPLS.top  FFF_bcc_gaff.mol2  em.mdp  md.mdp  sqm.in  sqm.out
test/dmp.acpype/: dmp.mol2  dmp.pkl  dmp_AC.frcmod  dmp_AC.inpcrd  dmp_AC.lib  (+17 more)
tests/: AAA.mol2  ADPMg.mol2  Base.inpcrd  ComplexG1.inpcrd  ComplexG2.inpcrd  DNA_BSC0.inpcrd  DNA_BSC0.prmtop  HEM.mol2  KKK.mol2  RAMP1_ion.inpcrd  RAMP1_ion.prmtop  README.txt  acpype_ligands_results.txt  analyse_test_acpype_db_ligands.py  benzene.mdl  benzene.mol  check_acpype.py  conftest.py  dmp.mol2  drift.mol2  em.mdp  glycam_corrupt.prmtop  glycam_exe.inpcrd  glycam_exe.prmtop  md.mdp  run_test_acpype_db_ligands.py  script_test.sh  test_acpype.py  test_acs_api.py  test_amb2gmx.py  test_api.py  test_mol.py  test_scenarios.py
(+1486 files in other folders)
