[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | amber.*
)/
'''

[tool.flake8] # it does nothing here, still need tox.ini
max-line-length = 120
extend-ignore = '''W503,E203,E501'''
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | _build
  | buck-out
  | build
  | dist
  | amber.*
)/
'''

[tool.poetry]
name = "acpype"
version = "2022.6.6"
description = "ACPYPE - AnteChamber PYthon Parser interfacE"
authors = ["Alan Silva <alanwilter@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://alanwilter.github.io/acpype/"
repository = "https://github.com/alanwilter/acpype"
keywords = ["acpype", "amber", "gromacs"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.7",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# packages = [{ include = "acpype" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/alanwilter/acpype/issues"
"Wiki" = "https://github.com/alanwilter/acpype/wiki"
"Docs" = "https://acpype.readthedocs.io"
"DOI" = "https://doi.org/10.1186/1756-0500-5-367"

[tool.poetry.scripts]
acpype = "acpype.cli:init_main"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = { extras = ["jupyter"], version = "^21.12b0" }
pytest-cov = "^3.0.0"
mypy = "^0.920"
pdbpp = "^0.10.3"
ipdb = "0.13"
isort = "^5.10.1"
pytest-random-order = "^1.0.4"
pyupgrade = "^2.31.0"
pre-commit = "^2.16.0"
Sphinx = "^4.3.2"
importlib-metadata = "^4.1"
twine = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
