# [project]
# requires-python = ">=3.8"
# name = "acpypes"

[tool.poetry]
name = "acpype"
version = "2023.10.25"
description = "ACPYPE - AnteChamber PYthon Parser interfacE"
authors = ["Alan Silva <alanwilter@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://alanwilter.github.io/acpype/"
repository = "https://github.com/alanwilter/acpype"
keywords = ["acpype", "amber", "gromacs"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# packages = [{ include = "acpype" }]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/alanwilter/acpype/issues"
"Wiki" = "https://github.com/alanwilter/acpype/wiki"
"Docs" = "https://acpype.readthedocs.io"
"DOI" = "https://doi.org/10.1186/1756-0500-5-367"

[tool.poetry.scripts]
acpype = "acpype.cli:init_main"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
openbabel-wheel = "^3.1.1.19"

[tool.poetry.dev-dependencies]
ruff = "^0.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.920"
pdbpp = "^0.10.3"
ipdb = "0.13"
pytest-random-order = "^1.0.4"
pre-commit = "^2.16.0"
importlib-metadata = "^4.1"
twine = "^3.7.1"
pytest-xdist = "^3.3.1"
pip = "^23.1.2"
wheel = "^0.40.0"
sphinx-rtd-theme = "^1.3.0"
sphinx = ">=6"

[tool.ruff]
explicit-preview-rules = true
target-version = "py38"
line-length = 120
extend-select = ["E501", "UP", "RUF"]
ignore = ['UP036']

[tool.pytest.ini_options]
addopts = "tests --cov=tests --cov=acpype --cov-report=term-missing:skip-covered --cov-report=xml --dist=loadgroup -n 0 --durations=5"
# markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.mypy]
# ignore_missing_imports = true #waiting for some stubs

[[tool.mypy.overrides]]
# module = ["cv2","tensorflow"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
